--- a/payment_info/templates/payment_info/PaymentInfo.html
+++ b/payment_info/templates/payment_info/PaymentInfo.html
@@ -2,38 +2,21 @@
 {% load staticfiles otree_tags %}
 
 {% block title %}
-    Thank you
+    Grazie
 {% endblock %}
 
 {% block content %}
 
 
     <p>
-        <em>Note: As this is a sample game, the points you earned will not be converted to a monetary value as would normally be the case.</em>
-    </p>
+        <em>Si tratta di un gioco di prova quindi i punti convertiti non saranno convertiti in moneta come normalmente avverrebbe.</em>
 
+
+    </p>
     <p>
-        <em>Below are examples of messages that could be displayed for different experimental settings.</em>
-    </p>
+    Comunque avresti guadagnato {{ player.participant.payoff }} che corrisponderebbero ad un totale di € {{ player.participant.money_to_pay }}.
 
-    <div class="panel panel-default" style="margin-bottom:10px">
-        <div class="panel-body">
-            <p><strong>Laboratory:</strong></p>
-            <p>Please remain seated until your number is called. Then take your number card, and proceed to the cashier.</p>
-            <p><em>Note: For the cashier in the laboratory, oTree can print a list of payments for all participants as a PDF.
-        </div>
-    </div>
 
-    <div class="panel panel-default" style="margin-bottom:10px">
-        <div class="panel-body">
-            <p><strong>Classroom:</strong></p>
-            <p><em>If you want to keep track of how students did, the easiest thing is to assign the starting links to students by name.
-                It is even possible to give each student a single permanent link for a whole semester; so no need to waste time in each
-                lecture with handing out new links and keeping track of which student uses which link. Alternatively, you may just give
-                students anonymous links or secret nicknames.</em>
-            </p>
-        </div>
-    </div>
 
 
 {% endblock %}
