Corretti piccoli dettagli sul testo

--- a/market/templates/market/Decide.html
+++ b/market/templates/market/Decide.html
@@ -14,7 +14,7 @@
 
 
 
-    {% formfield player.quality with label="Scegli un numero tra 0 e e 400 per la tua qualità" %}
+    {% formfield player.quality with label="Scegli un numero tra 0 e 400 per la tua qualità" %}
 
     {% formfield player.price with label="Scegli un numero tra la qualità scelta e 400 per il tuo prezzo" %}
 <p>
