--- a/market/templates/market/Short_Instructions.html
+++ b/market/templates/market/Short_Instructions.html
@@ -49,7 +49,7 @@ Il gioco dura per 10 round consecutivi, sempre con lo stesso “rivale”. In og
  </p>
 <p>
 Il beneficio sociale associato alla produzione è pari al seguente punteggio:</p>
-<p><strong>Beneficio sociale = Qualità x 1,5</strong>
+<p><strong>Beneficio sociale = Qualità x 1,5 x Quota di mercato</strong>
  </p>
 <p>
 Alla fine del gioco sarà sorteggiato uno specifico round e i punti da te ottenuti in quel round, sia come profitto individuale sia come beneficio sociale, saranno trasformati
