--- a/dictator/templates/dictator/Feedback.html
+++ b/dictator/templates/dictator/Feedback.html
@@ -1,8 +1,11 @@
 {% extends "global/Feedback.html" %}
+{% load i18n %}
 
 {% block explanation %}
-{% include "dictator/Question.html" %}
-<p>
-<strong>Solution:</strong> Payoffs for Participant 1 would be <strong>88 points</strong> and for 2 <strong>12 points</strong>.
-</p>
+    {% include "dictator/Question.html" %}
+    <p>
+        {% blocktrans trimmed %}
+            <strong>Solution:</strong> Payoffs for Participant 1 would be <strong>88 points</strong> and for 2 <strong>12 points</strong>.
+        {% endblocktrans %}
+    </p>
 {% endblock %}
