--- a/dictator/templates/dictator/Question.html
+++ b/dictator/templates/dictator/Question.html
@@ -1,3 +1,6 @@
+{% load i18n %}
 <p>
-Suppose that Participant 1 decided to retain 88 points. What would be the payoffs for Participant 1 and 2 respectively?
+    {% blocktrans trimmed %}
+        Suppose that Participant 1 decided to retain 88 points. What would be the payoffs for Participant 1 and 2 respectively?
+    {% endblocktrans %}
 </p>
