--- a/dictator/templates/dictator/Results.html
+++ b/dictator/templates/dictator/Results.html
@@ -1,22 +1,28 @@
 {% extends "global/Base.html" %}
 {% load staticfiles otree_tags %}
+{% load i18n %}
 
 {% block title %}
-Results
+    {% trans "Results" %}
 {% endblock %}
 
 {% block content %}
-<p>
-
-{% if player.id_in_group == 1 %}
-You decided to keep <strong>{{group.kept}}</strong> for yourself.
-{% else %}
-Participant 1 decided to keep <strong>{{group.kept}}</strong>, so you got <strong>{{offer}}</strong>.
-{% endif %}
-In addition, you receive 10 points for participation. Thus, your total payoff is <strong>{{player.payoff}}</strong>.
-</p>
-<p>
-{% next_button %}
-</p>
-{% include instructions %}
+    <p>
+        {% if player.id_in_group == 1 %}
+            {% blocktrans trimmed %}
+                You decided to keep <strong>{{group.kept}}</strong> for yourself.
+            {% endblocktrans %}
+        {% else %}
+            {% blocktrans trimmed %}
+                Participant 1 decided to keep <strong>{{group.kept}}</strong>, so you got <strong>{{offer}}</strong>.
+            {% endblocktrans %}
+        {% endif %}
+            {% blocktrans trimmed %}
+                In addition, you receive 10 points for participation. Thus, your total payoff is <strong>{{player.payoff}}</strong>.
+            {% endblocktrans %}
+    </p>
+    <p>
+        {% next_button %}
+    </p>
+    {% include instructions %}
 {% endblock %}
