--- a/public_goods/templates/public_goods/Question.html
+++ b/public_goods/templates/public_goods/Question.html
@@ -1,17 +1,23 @@
 {% extends "global/Base.html" %}
 {% load staticfiles otree_tags %}
+{% load i18n %}
+
 
 {% block title %}
-    Understanding Question 1 of 1
+    {% trans "Understanding Question 1 of 1" %}
 {% endblock %}
 
 {% block content %}
     <p>
-        Suppose in a group, 1 participant contributed 80 points, 1 participant contributed 40, and 1 participant contributed nothing.
-        What would be the payoff of the participant who contributed 80 points?
+        {% blocktrans trimmed %}
+            Suppose in a group, 1 participant contributed 80 points, 1 participant contributed 40, and 1 participant contributed nothing.
+            What would be the payoff of the participant who contributed 80 points?
+        {% endblocktrans %}
     </p>
 
-    {% formfield player.question with label="His payoff would be" %}
+    {% trans "His payoff would be" as label_value %}
+
+    {% formfield player.question with label=label_value %}
 
     {% next_button %}
 
