Ripulito dalla precedente implementazione locale della immissione del codice fornito dagli organizzatori. Aggiunto avvertimento sulla suddetta pagina di immessione. Corretto errore "Risults" in PaymentRecap.html.

--- a/payment_recap/templates/payment_recap/PaymentRecap.html
+++ b/payment_recap/templates/payment_recap/PaymentRecap.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 
 {% block title %}
-{% trans "Risults" %}
+{% trans "Results" %}
 {% endblock %}
 {% block content %}
 {% for app in applications_results %}
