--- a/public_goods/templates/public_goods/Instructions.html
+++ b/public_goods/templates/public_goods/Instructions.html
@@ -2,16 +2,16 @@
 <div class="box effect7">
     <h4>{% trans "Instructions" %}</h4>
     <p>
-        {% blocktrans trimmed %}
-            In this study, you will be in a randomly formed group of {{ Constants.players_per_group }} participants. Each participant in the group is given {{ Constants.endowment }}. The group
+        {% blocktrans trimmed with endowment=Constants.endowment  %}
+            In this study, you will be in a randomly formed group of 3 or 4 participants. Each participant in the group is given {{ endowment }}. The group
             has the opportunity to undertake a joint project. Each participant in the group decides how much she or he is going to contribute to
-            the project. Contribution could be any integer from 0 to {{ Constants.endowment }}.
+            the project. Contribution could be any integer from 0 to {{ endowment }}.
         {% endblocktrans %}
     </p>
     <p>
-        {% blocktrans trimmed %}
-            The earnings from the project are calculated as follows: The contributions of all {{ Constants.players_per_group }} participants are added up, the total contribution
-            is multiplied by a factor of {{ Constants.efficiency_factor }}, and the resulting amount is the total earnings from the project, which is evenly split among all {{ Constants.players_per_group }}
+        {% blocktrans trimmed with efficiency=Constants.efficiency_factor %}
+            The earnings from the project are calculated as follows: The contributions of all participants are added up, the total contribution
+            is multiplied by a factor of {{ efficiency }}, and the resulting amount is the total earnings from the project, which is evenly split among all
             participants. Your payoff equals your earnings from the project, plus the amount you did not contribute.
         {% endblocktrans %}
     </p>
