Modifiche varie sulla app risk

--- a/risk/templates/risk/Instructions.html
+++ b/risk/templates/risk/Instructions.html
@@ -4,12 +4,7 @@
 {% block instructions %}
 
 {% blocktrans trimmed with endowment=Constants.endowment %}
-    <p>
-        You will be asked to choose how to invest...
-    </p>
-    <p>
-        There are {{endoment}} to ...
-    </p>
+   bla bla
 {% endblocktrans %}
 
 {% endblock %}
