--- a/risk/templates/risk/Question.html
+++ b/risk/templates/risk/Question.html
@@ -16,7 +16,7 @@ E se il progetto avesse un esito negativo? Quanti punti avrai?
         {% endblocktrans %}
     </p>
 
-    {% trans "Avrei punti: " as label_value %}
+    {% trans "Avrei punti" as label_value %}
 
     {% formfield player.question with label=label_value %}
 
