--- a/risk/templates/risk/Invest.html
+++ b/risk/templates/risk/Invest.html
@@ -15,7 +15,7 @@
 
 
 
-    {% formfield player.invested with label="Scegli un numero tra 0 e 100 da investire nel progetto rischioso." %}
+    {% formfield player.invested with label="Inserisci un numero tra 0 e 20." %}
 
 <p>
 
