Aggiornate traduzioni. Problema sulle traduzioni di _templates/global: le traduzioni vengono ignorate

--- a/market/templates/market/Instructions.html
+++ b/market/templates/market/Instructions.html
@@ -8,7 +8,7 @@
 <p> Stai per partecipare ad un gioco di mercato assieme ad un altro partecipante abbinato a te casualmente.
 Rappresentate due imprese che competono fra loro. Producete un bene fittizio di cui potete determinare la qualità sociale,
     ovvero il tipo di ricaduta esterna associata alla sua produzione.
-    Potete pensare alla scelta di input produttivi che migliorano l’impatto ambientale o sociale del bene stesso (es. Materiali meno inquinanti, assenza di lavoro minorile, etc.).</p>
+    Potete pensare alla scelta di input produttivi che migliorano l’impatto ambientale o sociale del bene stesso (es. materiali meno inquinanti, assenza di lavoro minorile, etc.).</p>
 <p> Una maggiore qualità sociale comporta maggiori costi di produzione. Inoltre ogni impresa deve determinare anche il prezzo di vendita.
     La quota di mercato di ogni impresa è determinata automaticamente dal computer tramite un algoritmo matematico che riproduce delle preferenze realistiche di consumatori
     con un certo grado di sensibilità sociale. Sinteticamente, la quota di mercato di una impresa è tanto maggiore quanto più alta
