--- a/dictators_simultaneous/templates/dictators_simultaneous/Feedback.html
+++ b/dictators_simultaneous/templates/dictators_simultaneous/Feedback.html
@@ -1,7 +1,8 @@
 {% extends "global/Feedback.html" %}
 {% load i18n %}
 {% block explanation %}
-{% include "dictator/Question.html" %}
+{% include "dictators_simultaneous/Question.html" %}
+
 {% blocktrans trimmed %}
 <p>
 <strong>Solution:</strong> Payoffs for Participant 1 would be <strong>88 points</strong> and for 2 <strong>12 points</strong>.
