app description to payment_recap

--- a/payment_recap/templates/payment_recap/PaymentRecap.html
+++ b/payment_recap/templates/payment_recap/PaymentRecap.html
@@ -8,6 +8,7 @@
 {% block content %}
 {% for app in applications_results %}
     <h3>{% trans "Activity summary" %} {{ forloop.counter }}</h3>
+    <p>{{app.description}}</p>
     <table class=table style='width: auto'>
         {% for row in app.table %}
             <tr>
