Introduzione del campo description da visulizzare nel recap. Varie limature nelle traduzioni

--- a/dictators_simultaneous/templates/dictators_simultaneous/Feedback.html
+++ b/dictators_simultaneous/templates/dictators_simultaneous/Feedback.html
@@ -5,7 +5,7 @@
 
 {% blocktrans trimmed %}
 <p>
-<strong>Solution:</strong> Payoffs for Participant 1 would be <strong>88 points</strong> and for 2 <strong>12 points</strong>.
+<strong>Solution:</strong> Payoffs for you would be <strong>58 points</strong> and <strong>42 points</strong> for the other participant.
 </p>
 {% endblocktrans %}
 {% endblock %}
