--- a/dictators_simultaneous/templates/dictators_simultaneous/Question.html
+++ b/dictators_simultaneous/templates/dictators_simultaneous/Question.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 {% blocktrans trimmed %}
 <p>
-Suppose that Participant 1 decided to retain 88 points. What would be the payoffs for Participant 1 and 2 respectively?
+Suppose you decided to retain 58 points. What would be the payoffs for yourself and the other participant respectively?
 </p>
 {% endblocktrans %}
