--- a/market/templates/market/Short_Instructions.html
+++ b/market/templates/market/Short_Instructions.html
@@ -5,8 +5,8 @@
 {% block short_instructions %}
 
 {% blocktrans trimmed %}
-<p> Ti ricordiamo che la tua quota di mercato è tanto maggiore quanto più alta
-    la qualità del tuo bene e più basso il suo prezzo. Allo stesso tempo è crescente nel prezzo del rivale e decrescente nella sua qualità.
+<p> Ti ricordiamo che la tua quota di mercato è tanto maggiore quanto più alta la qualità del tuo bene
+    e più basso il suo prezzo. Allo stesso tempo è crescente nel prezzo del rivale e decrescente nella sua qualità.
     La seguente tabella sintetizza queste relazioni.</p>
 
 
@@ -38,19 +38,18 @@
     </table>
 
 </p>
-<p> In ogni round il profitto sarà pari a:</p>
+<p> In ogni turno il tuo profitto sarà pari a:</p>
 <p>
 
 <strong>Profitto = (Prezzo - Qualità) x Quota di mercato</strong>
  </p>
 <p>
-Il beneficio sociale associato alla produzione è pari a:</p>
-<p><strong>Beneficio sociale = Qualità x 1,5 x Quota di mercato</strong>
+Il beneficio sociale associato alla tua produzione è pari a:</p>
+<p><strong>Beneficio sociale = 1,5 x Qualità x Quota di mercato</strong>
  </p>
 <p>
-    I punti da te ottenuti termini di profitto e di beneficio sociale nel round sorteggiato saranno trasformati
-    in euro secondo il tasso di conversione 20 punti = 1 euro e assegnati a te come pagamento comoplessivo. I punti corrispondenti al beneficio sociale saranno presi dal tuo pagamento complessivo e versati alla
-    organizzazione benefica da te indicata.
+    I punti da te ottenuti in termini di profitto e di beneficio sociale nel turno sorteggiato saranno trasformati
+    in euro secondo il tasso di conversione <strong>20 punti = 1 euro</strong>.
 
 </p>
 {% endblocktrans %}
