--- a/welcome_choice/templates/welcome_choice/Welcome.html
+++ b/welcome_choice/templates/welcome_choice/Welcome.html
@@ -21,12 +21,15 @@ http://getbootstrap.com/components/
 {% blocktrans trimmed %}
 <p>Siamo lieti di darti il benvenuto a questo esperimento. Ti preghiamo di leggere le seguenti istruzioni con attenzione. Durante tutto il corso dell’esperimento è assolutamente vietato comunicare con altri partecipanti. Eventuali domande di chiarimento devono essere rivolte esclusivamente agli organizzatori. </p>
 <p>
-Partecipando all'esperimento puoi guadagnare del denaro il cui preciso ammontare dipende dalle scelte che saranno effettuate da te e dagli altri partecipanti. Tale somma ti sarà pagata in contanti al termine dell’esperimento stesso.
+Partecipando all'esperimento puoi guadagnare del denaro il cui preciso ammontare dipende dalle scelte che saranno effettuate da te e dagli altri partecipanti. Al termine dell’esperimento, tale somma ti sarà pagata in contanti e in forma privata in modo da garantire la riservatezza.
 Nel corso dell'esperimento potrai anche, tramite le tue scelte, contribuire all’associazione benefica che hai selezionato al momento della tua identificazione. La somma corrispondente, frutto delle scelte tue e degli altri partecipanti, sarà formalmente inclusa nel tuo pagamento complessivo, ma verrà immediatamente donata online alla associazione.
-Ti sarà chiesto di firmare una ricevuta relativa al pagamento complessivo, compresa la donazione.
-L’esperimento consiste di diverse sessioni e di un questionario finale. </p>
+Ti sarà chiesto di firmare una ricevuta relativa al pagamento complessivo, compresa la donazione.</p>
 <p>
-È importante che tu sia consapevole che tutte le tue decisioni e i tuoi guadagni sono informazioni private e anonime. Infatti gli sperimentatori alla fine studieranno i dati relativi alle scelte senza poterli abbinare ai partecipanti all’esperimento. Allo stesso tempo, ognuno di voi sarà pagato in privato dal personale amministrativo che non potrà in nessun modo sapere quali siano le scelte che vi hanno permesso di ottenere tali soldi.</p>
+L’esperimento consiste di quattro diverse attività da svolgere al computer e di un breve questionario cartaceo finale.
+Le scelte effettuate durante una specifica attività non avranno alcuna influenza sugli esiti delle altre attività, precedenti o successive. I guadagni conseguiti in ogni attività saranno comunicati ad ogni partecipante solo al termine dell'esperimento.
+</p>
+<p>
+È importante che tu sia consapevole che tutte le tue decisioni e i tuoi guadagni sono informazioni private e anonime. Nessuno degli altri partecipanti potrà conoscere le scelte da te effettuate durante l’esperimento né l’ammontare dei tuoi guadagni. Anche gli sperimentatori studieranno i dati relativi alle scelte senza poterli abbinare all'identità dei partecipanti all’esperimento. Allo stesso tempo, ognuno di voi sarà pagato in privato dal personale amministrativo che non potrà in alcun modo sapere quali siano le scelte che hanno determinato i vostri guadagni.</p>
 {% endblocktrans %}
     {% next_button %}
 
