Affinamenti e correzioni nelle traduzioni di MarketInfo

--- a/marketInfo/templates/marketInfo/Info.html
+++ b/marketInfo/templates/marketInfo/Info.html
@@ -8,7 +8,8 @@
 
 {% block title %}
 {% blocktrans trimmed with num_rounds=Constants.num_rounds %}
-Please notice: for this specific activity, during its {{ num_rounds }} rounds,
+This activity is exactly the same as the previous one. The only difference will be the following:
+for this specific activity, during its {{ num_rounds }} rounds,
 you have been matched with: <br> <br> <strong>{{ esito }}</strong>  <br>  <br> {% endblocktrans %}
 
 {% endblock %}
