--- a/welcome_choice/templates/welcome_choice/Welcome.html
+++ b/welcome_choice/templates/welcome_choice/Welcome.html
@@ -25,8 +25,11 @@ Partecipando all'esperimento puoi guadagnare del denaro il cui preciso ammontare
 Nel corso dell'esperimento potrai anche, tramite le tue scelte, contribuire all’associazione benefica che hai selezionato al momento della tua identificazione. La somma corrispondente, frutto delle scelte tue e degli altri partecipanti, sarà formalmente inclusa nel tuo pagamento complessivo, ma verrà immediatamente donata online alla associazione.
 Ti sarà chiesto di firmare una ricevuta relativa al pagamento complessivo, compresa la donazione.</p>
 <p>
-L’esperimento consiste di quattro diverse attività da svolgere al computer e di un breve questionario cartaceo finale.
+L’esperimento consiste di {{ n }} diverse attività da svolgere al computer e di un breve questionario cartaceo finale.
 Le scelte effettuate durante una specifica attività non avranno alcuna influenza sugli esiti delle altre attività, precedenti o successive. I guadagni conseguiti in ogni attività saranno comunicati ad ogni partecipante solo al termine dell'esperimento.
+</p>
+<p>
+    <strong>Ciascuna attività conduce a guadagnare dei punti che sono poi convertiti in denaro al tasso di {{ tasso }} punti per 1 Euro. </strong>
 </p>
 <p>
 È importante che tu sia consapevole che tutte le tue decisioni e i tuoi guadagni sono informazioni private e anonime.
